[package]
name = "rustory"
version = "0.1.1"
edition = "2023"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ignore = "0.4"
flate2 = "1.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "3.0"
